Testing fix for hover effect on mobile

--- a/src/components/Service.module.css
+++ b/src/components/Service.module.css
@@ -53,11 +53,15 @@
 @media screen and (max-width: 700px) {
     .service h1 {
         font-size: 20px;
-        pointer-events: none;
     }
     .service img {
-        pointer-events: none;
         scale: 0.6;
+    }
+    .serviceWrapper h1 {
+        pointer-events: none;
+    }
+    .serviceWrapper img {
+        pointer-events: none;
     }
     
 }
